fix left alignment

--- a/src/styles/content-block/content-block.css
+++ b/src/styles/content-block/content-block.css
@@ -6,6 +6,7 @@
 .content-block {
   padding-top: var(--content-block-top-bottom-padding);
   padding-bottom: var(--content-block-top-bottom-padding);
+  text-align: left;
 }
 
 .content-block-title {
